Updated Docker container name to products. Updated README with useful information about how to run the APP

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
             - "POSTGRES_HOST_AUTH_METHOD=trust"
         volumes:
             - postgres_data:/var/lib/postgresql/data/
-    users:
+    products:
         build: .
         command: bash -c "./manage.py runserver 0.0.0.0:8000"
         volumes:
