Running migrations every time the containers are created by docker-compose, updated README file with basic debugging information, how to stop and restart the app using Docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
             - postgres_data:/var/lib/postgresql/data/
     products:
         build: .
-        command: bash -c "./manage.py runserver 0.0.0.0:8000"
+        command: bash -c "./manage.py makemigrations && ./manage.py migrate && ./manage.py runserver 0.0.0.0:8000"
         volumes:
             - .:/code
         ports:
